--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -1,6 +1,6 @@
 @media (min-width: 992px) {
   header {
-    padding: 75px 0 0px;
+    padding: 65px 0 0 0px;
     background-color: #46728BFF;
   }
   nav {
@@ -19,6 +19,7 @@ div.inline {
   #headerblob {
     text-align: center;
     position: absolute;
+    padding-bottom: 10px;
     top: 100px;
     left: 0;
     width: 100%;
@@ -28,7 +29,7 @@ div.inline {
     float: none;
   }
   #headertext {
-    margin: 20px 0;
+    margin: 20px 50px;
   }
   #htname {
     font-size: 28px;
@@ -49,6 +50,10 @@ section {
   padding: 50px;
 }
 
+.ligh_dark_text {
+  color: #f8f9fa;
+}
+
 .miscimg img {
   height: 50px;
   float: left;
@@ -61,18 +66,29 @@ section {
   /* box-shadow: #AAA 0px 0px 4px 0px; */
   float: left;
 }
+
+#headerblob {
+    display: flex;
+    flex-wrap: wrap; /* Optional. only if you want the items to wrap */
+    justify-content: center; /* For horizontal alignment */
+    align-items: center; /* For vertical alignment */
+    padding-bottom: 10px;
+
+  }
+
 #htname {
   font-size: 46px;
   font-weight: 400;
 }
 #htdesc {
-  font-size: 18px;
-  font-weight: 300;
+  font-size: 20px;
+  font-weight: 400;
   margin-top: -6px;
 }
 #htem {
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 300;
+
 }
 
 
@@ -120,4 +136,10 @@ section {
 #return-to-top:hover i {
     color: #fff;
     top: 5px;
+}
+
+
+.email_link {
+  text-decoration: none;
+  color: #FFF;
 }
