Added About me and Publications. Layout updates

--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -45,6 +45,9 @@ html, body {
   color: #444;*/
 }
 
+footer {
+  background-color: #284E61FF;
+}
 
 section {
   padding: 50px;
@@ -143,3 +146,4 @@ section {
   text-decoration: none;
   color: #FFF;
 }
+
