--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -12,50 +12,6 @@ div.inline {
   float:left; 
 }
 
-@media (max-width: 768px) {
-	header {
-    padding: 156px 0 0px;
-  }
-  #headerblob {
-    text-align: center;
-    position: absolute;
-    padding-bottom: 10px;
-    top: 100px;
-    left: 0;
-    width: 100%;
-
-  }
-  .imgme {
-    float: none;
-  }
-  #headertext {
-    margin: 20px 50px;
-  }
-  #htname {
-    font-size: 28px;
-  }
-  #htdesc {
-    font-size: 16px;
-  }
-}
-
-html, body {
-  height: 100%;
-  /*font-family: 'Roboto', sans-serif;
-  color: #444;*/
-}
-
-footer {
-  background-color: #284E61FF;
-}
-
-section {
-  padding: 50px;
-}
-
-.ligh_dark_text {
-  color: #f8f9fa;
-}
 
 .miscimg img {
   height: 50px;
@@ -82,7 +38,9 @@ section {
 #htname {
   font-size: 46px;
   font-weight: 400;
+  margin-top: -10px;
 }
+
 #htdesc {
   font-size: 20px;
   font-weight: 400;
@@ -92,6 +50,93 @@ section {
   font-size: 16px;
   font-weight: 300;
 
+}
+
+
+@media (max-width: 768px) {
+	header {
+    padding: 340px 0 0px;
+  }
+  #headerblob {
+    text-align: center;
+    position: absolute;
+    padding-bottom: 10px;
+    padding-top: 40px;
+    top: 40px;
+    left: 0;
+    width: 100%;
+
+  }
+  .imgme {
+    float: left;
+    width: 30%
+  }
+  #headertext {
+    margin: 0px 0px;
+    padding-left: 0rem!important;
+  }
+  #htname {
+    font-size: 20px;
+    margin-top: 0px;
+  }
+  #htdesc {
+    font-size: 16px;
+  }
+
+  #icons {
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    -webkit-box-align: center;
+    align-items: center;
+    justify-content: center
+  }
+
+  .navbar-collapse {
+        position: absolute;
+        text-align: right;
+        top: 54px;
+        right: 0;
+        padding-left: 15px;
+        padding-right: 15px;
+        padding-bottom: 15px;
+        width: 100%;
+    }
+    .navbar-collapse.collapsing {
+        height: auto;
+        -webkit-transition: right 0.3s ease;
+        -o-transition: right 0.3s ease;
+        -moz-transition: right 0.3s ease;
+        transition: right 0.3s ease;
+        right: -100%;
+    }
+    .navbar-collapse.show {
+        right: 0;
+        -webkit-transition: right 0.3s ease-in;
+        -o-transition: right 0.3s ease-in;
+        -moz-transition: right 0.3s ease-in;
+        transition: right 0.3s ease-in;
+    }
+}
+
+html, body {
+  height: 100%;
+  /*font-family: 'Roboto', sans-serif;
+  color: #444;*/
+}
+
+footer {
+  background-color: #284E61FF;
+}
+
+section {
+  padding: 50px;
+}
+
+.ligh_dark_text {
+  color: #f8f9fa;
 }
 
 
