--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -8,8 +8,8 @@
   }
 }
 
-div.inline { 
-  float:left; 
+div.inline {
+  float:left;
 }
 
 
@@ -24,6 +24,7 @@ div.inline {
   border: 3px solid white;
   /* box-shadow: #AAA 0px 0px 4px 0px; */
   float: left;
+  width: 15%;
 }
 
 #headerblob {
@@ -50,6 +51,11 @@ div.inline {
   font-size: 16px;
   font-weight: 300;
 
+}
+
+#htcv{
+  font-size: 20px;
+  font-weight: 300;
 }
 
 
@@ -197,3 +203,6 @@ section {
 li {
     line-height: 1.0em;
 }
+
+
+
